<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>cn.ponfee</groupId>
  <artifactId>disjob-admin</artifactId>
  <version>${revision}</version>
  <packaging>pom</packaging>

  <name>${project.artifactId}</name>
  <url>https://github.com/dromara/disjob</url>
  <description>Disjob管理后台</description>

  <modules>
    <module>ruoyi-admin</module>
    <module>ruoyi-common</module>
    <module>ruoyi-framework</module>
    <module>ruoyi-system</module>
    <module>ruoyi-generator</module>
    <module>ruoyi-disjob</module>
  </modules>

  <properties>
    <revision>1.0.0-SNAPSHOT</revision>
    <disjob.version>2.2.4-SNAPSHOT</disjob.version>

    <file.encoding>UTF-8</file.encoding>
    <java.version>1.8</java.version>
    <project.build.sourceEncoding>${file.encoding}</project.build.sourceEncoding>
    <project.reporting.outputEncoding>${file.encoding}</project.reporting.outputEncoding>
    <maven.compiler.source>${java.version}</maven.compiler.source>
    <maven.compiler.target>${java.version}</maven.compiler.target>

    <spring-boot.version>2.7.18</spring-boot.version>
    <shiro.version>1.13.0</shiro.version>
    <thymeleaf-extras-shiro.version>2.1.0</thymeleaf-extras-shiro.version>
    <druid-spring-boot-starter.version>1.2.28</druid-spring-boot-starter.version>
    <kaptcha.version>2.3.3</kaptcha.version>
    <pagehelper-spring-boot-starter.version>2.1.1</pagehelper-spring-boot-starter.version>
    <fastjson.version>2.0.61</fastjson.version>
    <oshi-core.version>6.12.0</oshi-core.version>
    <poi-ooxml.version>5.5.1</poi-ooxml.version>
    <yauaa.version>7.32.0</yauaa.version>
    <velocity-engine-core.version>2.4.1</velocity-engine-core.version>
  </properties>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-dependencies</artifactId>
        <version>${spring-boot.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>

      <dependency>
        <groupId>cn.ponfee</groupId>
        <artifactId>ruoyi-common</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>cn.ponfee</groupId>
        <artifactId>ruoyi-system</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>cn.ponfee</groupId>
        <artifactId>ruoyi-framework</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>cn.ponfee</groupId>
        <artifactId>ruoyi-disjob</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>cn.ponfee</groupId>
        <artifactId>ruoyi-generator</artifactId>
        <version>${project.version}</version>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.10.1</version>
        <configuration>
          <encoding>${file.encoding}</encoding>
          <source>${java.version}</source>
          <target>${java.version}</target>
          <compilerArgument>-parameters</compilerArgument>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>flatten-maven-plugin</artifactId>
        <version>1.7.3</version>
        <configuration>
          <updatePomFile>true</updatePomFile>
          <flattenMode>resolveCiFriendliesOnly</flattenMode>
          <outputDirectory>target</outputDirectory>
        </configuration>
        <executions>
          <execution>
            <id>flatten.process-resources</id>
            <phase>process-resources</phase>
            <goals>
              <goal>flatten</goal>
            </goals>
          </execution>
          <execution>
            <id>flatten.clean</id>
            <phase>clean</phase>
            <goals>
              <goal>clean</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>

  <repositories>
    <repository>
      <id>central-snapshots</id>
      <url>https://central.sonatype.com/repository/maven-snapshots/</url>
      <snapshots>
        <enabled>true</enabled>
      </snapshots>
      <releases>
        <enabled>false</enabled>
      </releases>
    </repository>
  </repositories>

</project>
